# erc20-snapshot-tool

./: .gitignore  Cargo.toml  config.json  dec-lpl-balances.json  dec-lpla-2-balances.json  dec-lpla-balances.json  dec-sdl-balances.json  dec-sdl-slp-balances.json  dec-stsdl-balances.json  nov-lpl-balances.json  readme.md  test.md
parse/: Cargo.toml  new-output.json  output.json
parse/src/: main.rs
src/: main.rs  utils.rs
