[package]
name = "ethereum-erc20-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0.2", features = ["rustls", "openssl"] }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }